--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ log = "^0.4"
 core_affinity = "^0.5"
 static_assertions = "^1.1"
 parking_lot = "^0.11"
+anyhow = "^1.0"
 
 [dev-dependencies]
 criterion = "^0.3"
